[gd_scene load_steps=7 format=2]

[ext_resource path="res://Grafics/Asset 1/Fons/Day/3.png" type="Texture" id=1]
[ext_resource path="res://Grafics/Asset 1/Fons/Day/4.png" type="Texture" id=2]
[ext_resource path="res://Grafics/Asset 1/Fons/Day/5.png" type="Texture" id=3]
[ext_resource path="res://Grafics/Asset 1/Fons/Day/1.png" type="Texture" id=4]
[ext_resource path="res://Grafics/Asset 1/Fons/Day/2.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Fons_dia.gd" type="Script" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="subSprite" type="Sprite" parent="Sprite"]
position = Vector2( -576, 0 )
texture = ExtResource( 4 )

[node name="subSprite_2" type="Sprite" parent="Sprite"]
position = Vector2( 576, 0 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="subSprite2" type="Sprite" parent="Sprite2"]
position = Vector2( -576, 0 )
texture = ExtResource( 5 )

[node name="subSprite2_2" type="Sprite" parent="Sprite2"]
position = Vector2( 576, 0 )
texture = ExtResource( 5 )

[node name="Sprite3" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="subSprite3" type="Sprite" parent="Sprite3"]
position = Vector2( -576, 0 )
texture = ExtResource( 1 )

[node name="subSprite3_2" type="Sprite" parent="Sprite3"]
position = Vector2( 576, 0 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="subSprite4" type="Sprite" parent="Sprite4"]
position = Vector2( -576, 0 )
texture = ExtResource( 2 )

[node name="subSprite4_2" type="Sprite" parent="Sprite4"]
position = Vector2( -576, 0 )
texture = ExtResource( 2 )

[node name="Sprite5" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Sprite6" type="Sprite" parent="Sprite5"]
position = Vector2( -576, 0 )
texture = ExtResource( 3 )

[node name="Sprite7" type="Sprite" parent="Sprite5"]
position = Vector2( 576, 0 )
texture = ExtResource( 3 )
